# Kingpin

./: .gitignore  CMakeLists.txt  Kingpin.jucer  README.md
.old/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Ableton Test/Backup/: Kingpin [2023-10-24 183837].als
Source/: PitchMap.cpp  PitchMap.h  PluginEditor.cpp  PluginEditor.h
ableton/: Kingpin.als
ableton/Backup/: Kingpin [2023-10-24 192059].als
libs/cmake/: CMakeLists.txt
plugin/: CMakeLists.txt
plugin/include/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
